--- a/src/app/components/users/users.component.html
+++ b/src/app/components/users/users.component.html
@@ -1,17 +1,19 @@
 <div class="container">
     <mat-card class="card" *ngFor="let user of userList">
         <mat-card-header>
-            <mat-card-title>{{user.nombre_usuario}}</mat-card-title>
-            <mat-card-content>
-                <p>{{user.empleado.nombre}}</p>
-                <p>{{user.empleado.apellidos}}</p>
-                <p>{{user.empleado.direccion}}</p>
-                <p>{{user.empleado.email}}</p>
-                <p>{{user.empleado.fecha_contratacion}}</p>
-            </mat-card-content>
-            <mat-card-actions>
-                <button mat-button>Boton</button>
-            </mat-card-actions>
+            <mat-card-title>{{user.empleado.nombre}} {{user.empleado.apellidos}}</mat-card-title>
         </mat-card-header>
+        <mat-card-content>
+            <p>Username: {{user.nombre_usuario}}</p>
+            <p>Dirección: {{user.empleado.direccion}}</p>
+            <p>Email: {{user.empleado.email}}</p>
+            <p>Fecha de Contratación: {{user.empleado.fecha_contratacion | date:"MM/dd/yy" }}</p>
+        </mat-card-content>
+        <mat-card-footer>
+        <mat-card-actions>
+            <button mat-button>Boton</button>
+        </mat-card-actions>
+        </mat-card-footer>
     </mat-card>
+    <button mat-button> <mat-icon></mat-icon></button>
 </div>
