--- a/src/app/components/users/users.component.html
+++ b/src/app/components/users/users.component.html
@@ -11,7 +11,7 @@
         </mat-card-content>
         <mat-card-actions>
             <button mat-icon-button style="justify-content: right;" (click)="openModal()"><mat-icon>person_add</mat-icon></button>
-            <button mat-icon-button style="justify-content: right;"><mat-icon>edit</mat-icon></button>
+            <button mat-icon-button style="justify-content: right;" (click)="updateModal(user)" ><mat-icon>edit</mat-icon></button>
             <button mat-icon-button style="justify-content: right;" (click)="deleteUser(user)"><mat-icon>person_remove</mat-icon></button>
         </mat-card-actions>
     </mat-card>
