Ya esta terminado el MVP ALV CHAVAAAAAAAL

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -35,9 +35,9 @@
   </mat-sidenav>
 
   <mat-sidenav-content>
-      <mat-toolbar color="primary" class="app-header">
+      <mat-toolbar color="primary" style="position:sticky;" class="app-header">
         <div>
-          <a href="#" class="title">App</a>
+          <a href="#" class="title">Llantera</a>
         </div>
         <span class="nav-tool-items">
           <a mat-button routerLink="new-post" routerLinkActive="active">New Post</a>
