--- a/src/app/components/user-modal/user-update.component.html
+++ b/src/app/components/user-modal/user-update.component.html
@@ -28,7 +28,7 @@
               </mat-select>
             </mat-form-field>
         <div>
-          <button mat-button matStepperNext (click)="insertUser()">Terminar</button>
+          <button mat-button matStepperNext (click)="updateUser()">Terminar</button>
         </div>
       </form>
     </mat-step>
