--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -23,13 +23,14 @@
   <mat-sidenav #sidenav opened mode="side" [fixedInViewPort]="fixed" color="primary" position="start" class="mat-drawer-open" style="visibility: visible;">
     <div>
       <mat-toolbar color="primary" class="app-header">
-     
+
         <div>
           <a href="#" class="title">Dashboard</a>
         </div>
       </mat-toolbar>
         <mat-nav-list>
             <a mat-list-item routerLink="users" routerLinkActive="active">Usuarios</a>
+            <a mat-list-item routerLink="employees" routerLinkActive="active">Empleados</a>
         </mat-nav-list>
     </div>
   </mat-sidenav>
@@ -40,8 +41,8 @@
           <a href="#" class="title">Llantera</a>
         </div>
         <span class="nav-tool-items">
-          <a mat-button routerLink="login" routerLinkActive="active">Log In</a>
-          <a mat-button mat-raised-button routerLink="register" routerLinkActive="active">Register</a>
+          <a mat-button routerLink="login" routerLinkActive="active">Iniciar Sesión</a>
+          <a mat-button mat-raised-button routerLink="register" routerLinkActive="active">Registrarse</a>
         </span>
       </mat-toolbar>
       <router-outlet></router-outlet>
