--- a/src/app/components/employees/employees.component.html
+++ b/src/app/components/employees/employees.component.html
@@ -1,1 +1,61 @@
-<p>employees works!</p>
+<div class="container">
+  <mat-card class="card">
+      <mat-card-header>
+          <mat-card-title style="justify-content: space-around;"><h1>Empleados<button mat-icon-button  (click)="openModal()">
+            <mat-icon>person_add</mat-icon>
+          </button></h1><br></mat-card-title>
+
+      </mat-card-header>
+      <mat-card-content>
+          <div class="container-table">
+              <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+                <ng-container matColumnDef="nombre">
+                  <th mat-header-cell *matHeaderCellDef>Nombre</th>
+                  <td mat-cell *matCellDef="let empleado"> {{empleado.nombre}} </td>
+                </ng-container>
+
+                <ng-container matColumnDef="email">
+                  <th mat-header-cell *matHeaderCellDef>Correo electrónico</th>
+                  <td mat-cell *matCellDef="let empleado"> {{empleado.email}} </td>
+                </ng-container>
+
+                <ng-container matColumnDef="apellidos">
+                  <th mat-header-cell *matHeaderCellDef>Apellidos</th>
+                  <td mat-cell *matCellDef="let empleado"> {{empleado.apellidos}} </td>
+                </ng-container>
+
+                <ng-container matColumnDef="direccion">
+                  <th mat-header-cell *matHeaderCellDef>Dirección</th>
+                  <td mat-cell *matCellDef="let empleado"> {{empleado.direccion}} </td>
+                </ng-container>
+
+                <ng-container matColumnDef="telefono">
+                  <th mat-header-cell *matHeaderCellDef>Teléfono</th>
+                  <td mat-cell *matCellDef="let empleado"> {{empleado.telefono}} </td>
+                </ng-container>
+
+                <ng-container matColumnDef="fecha_contratacion">
+                  <th mat-header-cell *matHeaderCellDef>Fecha de Contratacion</th>
+                  <td mat-cell *matCellDef="let empleado"> {{empleado.fecha_contratacion | date:"MM/dd/yy" }} </td>
+                </ng-container>
+
+                <ng-container matColumnDef="acciones">
+                  <th mat-header-cell *matHeaderCellDef>Acciones</th>
+                  <td mat-cell *matCellDef="let empleado">
+                    <button mat-icon-button style="justify-content: right;" (click)="updateModal(empleado)">
+                      <mat-icon>edit</mat-icon>
+                    </button>
+                    <button mat-icon-button style="justify-content: right;" (click)="deleteEmployee(empleado)">
+                      <mat-icon>person_remove</mat-icon>
+                    </button>
+                  </td>
+                </ng-container>
+
+                <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                <tr mat-row *matRowDef="let row; columns: displayedColumns;">
+                </tr>
+              </table>
+            </div>
+      </mat-card-content>
+  </mat-card>
+</div>
