--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -29,8 +29,17 @@
         </div>
       </mat-toolbar>
         <mat-nav-list>
-            <a mat-list-item routerLink="users" routerLinkActive="active">Usuarios</a>
+            <a mat-list-item routerLink="users" routerLinkActive="active" >Usuarios</a>
             <a mat-list-item routerLink="employees" routerLinkActive="active">Empleados</a>
+            <mat-expansion-panel>
+              <mat-expansion-panel-header style="padding-left: 0;">
+                <mat-panel-title>
+                  <a mat-list-item>Tipo de Usuarios</a>
+                </mat-panel-title>
+              </mat-expansion-panel-header>
+              <a  mat-list-item routerLink="users/admin" routerLinkActive="active" >Administrador</a>
+              <a  mat-list-item routerLink="users/employees" routerLinkActive="active" >Usuarios</a>
+            </mat-expansion-panel>
         </mat-nav-list>
     </div>
   </mat-sidenav>
