--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -31,6 +31,7 @@
         <mat-nav-list>
             <a mat-list-item routerLink="users" routerLinkActive="active" >Usuarios</a>
             <a mat-list-item routerLink="employees" routerLinkActive="active">Empleados</a>
+            <a  mat-list-item routerLink="clients" routerLinkActive="active" >Clientes</a>
             <mat-expansion-panel>
               <mat-expansion-panel-header style="padding-left: 0;">
                 <mat-panel-title>
