--- a/src/app/components/clients/clients.component.html
+++ b/src/app/components/clients/clients.component.html
@@ -34,18 +34,18 @@
                   <td mat-cell *matCellDef="let empleado"> {{empleado.telefono}} </td>
                 </ng-container>
 
-                <ng-container matColumnDef="fecha_contratacion">
-                  <th mat-header-cell *matHeaderCellDef>Fecha de Contratacion</th>
-                  <td mat-cell *matCellDef="let empleado"> {{empleado.fecha_contratacion | date:"MM/dd/yy" }} </td>
+                <ng-container matColumnDef="fecha_registro">
+                  <th mat-header-cell *matHeaderCellDef>Fecha de Registro</th>
+                  <td mat-cell *matCellDef="let empleado"> {{empleado.fecha_registro | date:"MM/dd/yy" }} </td>
                 </ng-container>
 
                 <ng-container matColumnDef="acciones">
                   <th mat-header-cell *matHeaderCellDef>Acciones</th>
                   <td mat-cell *matCellDef="let empleado">
-                    <button mat-icon-button style="justify-content: right;" (click)="updateModal(empleado)">
+                    <button mat-icon-button style="justify-content: right;" (click)="updateClient(empleado)">
                       <mat-icon>edit</mat-icon>
                     </button>
-                    <button mat-icon-button style="justify-content: right;" (click)="deleteEmployee(empleado)">
+                    <button mat-icon-button style="justify-content: right;" (click)="deleteClient(empleado)">
                       <mat-icon>person_remove</mat-icon>
                     </button>
                   </td>
