--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -41,6 +41,17 @@
               <a  mat-list-item routerLink="users/admin" routerLinkActive="active" >Administrador</a>
               <a  mat-list-item routerLink="users/employees" routerLinkActive="active" >Usuarios</a>
             </mat-expansion-panel>
+            <a  mat-list-item routerLink="partes" routerLinkActive="active" >Partes</a>
+            <mat-expansion-panel>
+              <mat-expansion-panel-header style="padding-left: 0;">
+                <mat-panel-title>
+                  <a mat-list-item>Tipo de Partes</a>
+                </mat-panel-title>
+              </mat-expansion-panel-header>
+              <a  mat-list-item routerLink="partes/motor" routerLinkActive="active" >Motor</a>
+              <a  mat-list-item routerLink="partes/carroceria" routerLinkActive="active" >Carroceria</a>
+            </mat-expansion-panel>
+            <a  mat-list-item routerLink="garantias" routerLinkActive="active" >Garantias</a>
         </mat-nav-list>
     </div>
   </mat-sidenav>
