--- a/src/app/components/partes/partes.component.html
+++ b/src/app/components/partes/partes.component.html
@@ -3,7 +3,7 @@
       <mat-card-header>
         <mat-card-title
           ><h1>
-            Administradores
+            Partes
             <button
               mat-icon-button
               style="justify-content: right;"
@@ -17,35 +17,42 @@
       <mat-card-content>
         <div class="container-table">
           <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+            <ng-container matColumnDef="nombre_parte">
+              <th mat-header-cell *matHeaderCellDef>Nombre de Parte</th>
+              <td mat-cell *matCellDef="let parte">{{ parte.nombre_parte }}</td>
+            </ng-container>
   
-            <ng-container matColumnDef="fecha_inicio">
-              <th mat-header-cell *matHeaderCellDef>Fecha de Inicio</th>
-              <td mat-cell *matCellDef="let garantia">
-                {{ garantia.fecha_inicio | date: "MM/dd/yy" }}
+            <ng-container matColumnDef="descripcion_parte">
+              <th mat-header-cell *matHeaderCellDef>Descripcion</th>
+              <td mat-cell *matCellDef="let parte">{{ parte.descripcion_parte }}</td>
+            </ng-container>
+  
+            <ng-container matColumnDef="precio">
+              <th mat-header-cell *matHeaderCellDef>Precio</th>
+              <td mat-cell *matCellDef="let parte">
+                {{ parte.precio }}
               </td>
             </ng-container>
-            
-            <ng-container matColumnDef="fecha_vencimiento">
-                <th mat-header-cell *matHeaderCellDef>Fecha de Vencimiento</th>
-                <td mat-cell *matCellDef="let garantia">
-                  {{ garantia.fecha_vencimiento | date: "MM/dd/yy" }}
-                </td>
-              </ng-container>
+  
+            <ng-container matColumnDef="denominacion_parte">
+              <th mat-header-cell *matHeaderCellDef>Tipo de Parte</th>
+              <td mat-cell *matCellDef="let parte">{{ parte.tipo_parte.denominacion_parte }}</td>
+            </ng-container>
   
             <ng-container matColumnDef="acciones">
               <th mat-header-cell *matHeaderCellDef>Acciones</th>
-              <td mat-cell *matCellDef="let garantia">
+              <td mat-cell *matCellDef="let parte">
                 <button
                   mat-icon-button
                   style="justify-content: right;"
-                  (click)="updateModal(garantia)"
+                  (click)="updateModal(parte)"
                 >
                   <mat-icon>edit</mat-icon>
                 </button>
                 <button
                   mat-icon-button
                   style="justify-content: right;"
-                  (click)="deleteGarantia(garantia)"
+                  (click)="deletePart(parte)"
                 >
                   <mat-icon>person_remove</mat-icon>
                 </button>
@@ -59,4 +66,3 @@
       </mat-card-content>
     </mat-card>
   </div>
-
