--- a/src/app/components/vehiculos/vehiculos.component.html
+++ b/src/app/components/vehiculos/vehiculos.component.html
@@ -1,1 +1,51 @@
-<p>vehiculos works!</p>
+<div class="container">
+  <mat-card class="card">
+      <mat-card-header>
+          <mat-card-title style="justify-content: space-around;"><h1>Vehiculos<button mat-icon-button  (click)="openModal()">
+            <mat-icon>person_add</mat-icon>
+          </button></h1><br></mat-card-title>
+
+      </mat-card-header>
+      <mat-card-content>
+          <div class="container-table">
+              <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+                <ng-container matColumnDef="modelo">
+                  <th mat-header-cell *matHeaderCellDef>Modelo</th>
+                  <td mat-cell *matCellDef="let vehiculo"> {{vehiculo.modelo}} </td>
+                </ng-container>
+
+                <ng-container matColumnDef="descripcion">
+                  <th mat-header-cell *matHeaderCellDef>Descripcion</th>
+                  <td mat-cell *matCellDef="let vehiculo"> {{vehiculo.descripcion}} </td>
+                </ng-container>
+
+                <ng-container matColumnDef="fecha_fabricacion">
+                  <th mat-header-cell *matHeaderCellDef>Fecha de fabricación</th>
+                  <td mat-cell *matCellDef="let vehiculo"> {{vehiculo.fecha_fabricacion}} </td>
+                </ng-container>
+
+                <ng-container matColumnDef="fecha_registro">
+                  <th mat-header-cell *matHeaderCellDef>Fecha de registro</th>
+                  <td mat-cell *matCellDef="let vehiculo"> {{vehiculo.fecha_registro}} </td>
+                </ng-container>
+
+                <ng-container matColumnDef="acciones">
+                  <th mat-header-cell *matHeaderCellDef>Acciones</th>
+                  <td mat-cell *matCellDef="let vehiculo">
+                    <button mat-icon-button style="justify-content: right;" (click)="updateVehicle(vehiculo)">
+                      <mat-icon>edit</mat-icon>
+                    </button>
+                    <button mat-icon-button style="justify-content: right;" (click)="deleteVehicle(vehiculo)">
+                      <mat-icon>person_remove</mat-icon>
+                    </button>
+                  </td>
+                </ng-container>
+
+                <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                <tr mat-row *matRowDef="let row; columns: displayedColumns;">
+                </tr>
+              </table>
+            </div>
+      </mat-card-content>
+  </mat-card>
+</div>
