--- a/src/styles.css
+++ b/src/styles.css
@@ -2,3 +2,25 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+.card {
+    justify-content: center;
+  }
+  
+  .floating-btn {
+    float: right;
+    z-index: -1;
+  }
+  
+  table{
+    align-self: center;
+    margin-top: 1.25em;
+    margin-bottom: 1.25em;
+    width: 90%;
+  }
+  
+  .container-table {
+    display: flex;
+    justify-content: center;
+  }
+  
