+Tipo_Parte: +Carroceria +Motor; Comentarios agregados a API

--- a/src/app/components/garantias/garantias.component.html
+++ b/src/app/components/garantias/garantias.component.html
@@ -3,7 +3,7 @@
       <mat-card-header>
         <mat-card-title
           ><h1>
-            Administradores
+            Garantias
             <button
               mat-icon-button
               style="justify-content: right;"
