--- a/src/app/components/motor/motor.component.html
+++ b/src/app/components/motor/motor.component.html
@@ -1,1 +1,63 @@
-<p>motor works!</p>
+<div class="container">
+    <mat-card class="card">
+      <mat-card-header>
+        <mat-card-title
+          ><h1>
+            Partes para Motor
+            <button
+              mat-icon-button
+              style="justify-content: right;"
+              (click)="openModal()"
+            >
+              <mat-icon>person_add</mat-icon>
+            </button>
+          </h1></mat-card-title
+        >
+      </mat-card-header>
+      <mat-card-content>
+        <div class="container-table">
+          <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+            <ng-container matColumnDef="nombre_parte">
+              <th mat-header-cell *matHeaderCellDef>Nombre de Parte</th>
+              <td mat-cell *matCellDef="let motor">{{ motor.nombre_parte }}</td>
+            </ng-container>
+  
+            <ng-container matColumnDef="descripcion_parte">
+              <th mat-header-cell *matHeaderCellDef>Descripcion</th>
+              <td mat-cell *matCellDef="let motor">{{ motor.descripcion_parte }}</td>
+            </ng-container>
+  
+            <ng-container matColumnDef="precio">
+              <th mat-header-cell *matHeaderCellDef>Precio</th>
+              <td mat-cell *matCellDef="let motor">
+                {{ motor.precio }}
+              </td>
+            </ng-container>
+  
+            <ng-container matColumnDef="acciones">
+              <th mat-header-cell *matHeaderCellDef>Acciones</th>
+              <td mat-cell *matCellDef="let motor">
+                <button
+                  mat-icon-button
+                  style="justify-content: right;"
+                  (click)="updateModal(motor)"
+                >
+                  <mat-icon>edit</mat-icon>
+                </button>
+                <button
+                  mat-icon-button
+                  style="justify-content: right;"
+                  (click)="deletePart(motor)"
+                >
+                  <mat-icon>person_remove</mat-icon>
+                </button>
+              </td>
+            </ng-container>
+  
+            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+          </table>
+        </div>
+      </mat-card-content>
+    </mat-card>
+  </div>
