+styles.css NEW FACE

--- a/src/app/components/carroceria/carroceria.component.html
+++ b/src/app/components/carroceria/carroceria.component.html
@@ -1,18 +1,13 @@
 <div class="container">
     <mat-card class="card">
       <mat-card-header>
-        <mat-card-title
-          ><h1>
-            Partes para Carroceria
-            <button
-              mat-icon-button
-              style="justify-content: right;"
-              (click)="openModal()"
-            >
-              <mat-icon>person_add</mat-icon>
-            </button>
-          </h1></mat-card-title
-        >
+        <mat-card-title>
+          <div class="title-pill">
+            <h2 style="width: 100%;">
+              Partes para Carroceria
+            </h2>
+          </div>
+          </mat-card-title>
       </mat-card-header>
       <mat-card-content>
         <div class="container-table">
