--- a/src/app/components/users/users.component.html
+++ b/src/app/components/users/users.component.html
@@ -1,17 +1,19 @@
 <div class="container">
   <mat-card class="card">
     <mat-card-header>
-      <mat-card-title
-        ><h1>
-          Usuarios
+      <mat-card-title>
+        <div class="title-pill">
+          <h2>
+            Usuarios
+          </h2>
           <button
             mat-icon-button
             style="justify-content: right;"
-            (click)="openModal()"
-          >
+            (click)="openModal()">
             <mat-icon>person_add</mat-icon>
           </button>
-        </h1></mat-card-title
+        </div>
+        </mat-card-title
       >
     </mat-card-header>
     <mat-card-content>
