--- a/src/app/components/clients/clients.component.html
+++ b/src/app/components/clients/clients.component.html
@@ -1,9 +1,17 @@
 <div class="container">
   <mat-card class="card">
       <mat-card-header>
-          <mat-card-title style="justify-content: space-around;"><h1>Clientes<button mat-icon-button  (click)="openModal()">
-            <mat-icon>person_add</mat-icon>
-          </button></h1><br></mat-card-title>
+          <mat-card-title style="justify-content: space-around;"><div class="title-pill">
+            <h2>
+              Clientes
+            </h2>
+            <button
+              mat-icon-button
+              style="justify-content: right;"
+              (click)="openModal()">
+              <mat-icon>person_add</mat-icon>
+            </button>
+          </div></mat-card-title>
 
       </mat-card-header>
       <mat-card-content>
