--- a/src/app/components/vehiculos/vehiculos.component.html
+++ b/src/app/components/vehiculos/vehiculos.component.html
@@ -1,9 +1,17 @@
 <div class="container">
   <mat-card class="card">
       <mat-card-header>
-          <mat-card-title style="justify-content: space-around;"><h1>Vehiculos<button mat-icon-button  (click)="openModal()">
-            <mat-icon>person_add</mat-icon>
-          </button></h1><br></mat-card-title>
+          <mat-card-title style="justify-content: space-around;"><div class="title-pill">
+            <h2>
+              Vehiculos
+            </h2>
+            <button
+              mat-icon-button
+              style="justify-content: right;"
+              (click)="openModal()">
+              <mat-icon>person_add</mat-icon>
+            </button>
+          </div></mat-card-title>
 
       </mat-card-header>
       <mat-card-content>
@@ -21,12 +29,12 @@
 
                 <ng-container matColumnDef="fecha_fabricacion">
                   <th mat-header-cell *matHeaderCellDef>Fecha de fabricación</th>
-                  <td mat-cell *matCellDef="let vehiculo"> {{vehiculo.fecha_fabricacion}} </td>
+                  <td mat-cell *matCellDef="let vehiculo"> {{vehiculo.fecha_fabricacion | date: "yyyy" }} </td>
                 </ng-container>
 
                 <ng-container matColumnDef="fecha_registro">
                   <th mat-header-cell *matHeaderCellDef>Fecha de registro</th>
-                  <td mat-cell *matCellDef="let vehiculo"> {{vehiculo.fecha_registro}} </td>
+                  <td mat-cell *matCellDef="let vehiculo"> {{vehiculo.fecha_registro | date: "MM/dd/yy" }} </td>
                 </ng-container>
 
                 <ng-container matColumnDef="acciones">
