Module vehiculo finish

--- a/src/app/components/vehiculos/vehiculos.component.html
+++ b/src/app/components/vehiculos/vehiculos.component.html
@@ -29,7 +29,7 @@
 
                 <ng-container matColumnDef="fecha_fabricacion">
                   <th mat-header-cell *matHeaderCellDef>Fecha de fabricación</th>
-                  <td mat-cell *matCellDef="let vehiculo"> {{vehiculo.fecha_fabricacion | date: "yyyy" }} </td>
+                  <td mat-cell *matCellDef="let vehiculo"> {{vehiculo.fecha_fabricacion }} </td>
                 </ng-container>
 
                 <ng-container matColumnDef="fecha_registro">
