+Stock Module finish

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -29,6 +29,7 @@
         </div>
       </mat-toolbar>
         <mat-nav-list>
+          <a mat-list-item routerLink="stocks" routerLinkActive="active" >Inventario</a>
             <a mat-list-item routerLink="users" routerLinkActive="active" >Usuarios</a>
             <a mat-list-item routerLink="employees" routerLinkActive="active">Empleados</a>
             <a  mat-list-item routerLink="clients" routerLinkActive="active" >Clientes</a>
