--- a/src/app/components/motor/motor.component.html
+++ b/src/app/components/motor/motor.component.html
@@ -17,19 +17,19 @@
               <th mat-header-cell *matHeaderCellDef>Nombre de Parte</th>
               <td mat-cell *matCellDef="let motor">{{ motor.nombre_parte }}</td>
             </ng-container>
-  
+
             <ng-container matColumnDef="descripcion_parte">
               <th mat-header-cell *matHeaderCellDef>Descripcion</th>
               <td mat-cell *matCellDef="let motor">{{ motor.descripcion_parte }}</td>
             </ng-container>
-  
+
             <ng-container matColumnDef="precio">
               <th mat-header-cell *matHeaderCellDef>Precio</th>
               <td mat-cell *matCellDef="let motor">
-                {{ motor.precio }}
+                {{ motor.precio | currency }}
               </td>
             </ng-container>
-  
+
             <ng-container matColumnDef="acciones">
               <th mat-header-cell *matHeaderCellDef>Acciones</th>
               <td mat-cell *matCellDef="let motor">
@@ -43,13 +43,13 @@
                 <button
                   mat-icon-button
                   style="justify-content: right;"
-                  (click)="deletePart(motor)"
+                  (click)="deleteParte(motor)"
                 >
                   <mat-icon>person_remove</mat-icon>
                 </button>
               </td>
             </ng-container>
-  
+
             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
             <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
           </table>
