--- a/src/app/components/vehiculos/vehiculos.component.html
+++ b/src/app/components/vehiculos/vehiculos.component.html
@@ -44,7 +44,7 @@
                       <mat-icon>edit</mat-icon>
                     </button>
                     <button mat-icon-button style="justify-content: right;" (click)="deleteVehicle(vehiculo)">
-                      <mat-icon>person_remove</mat-icon>
+                      <mat-icon>remove_circle_outline</mat-icon>
                     </button>
                   </td>
                 </ng-container>
