--- a/src/app/components/garantias/garantias.component.html
+++ b/src/app/components/garantias/garantias.component.html
@@ -42,7 +42,7 @@
                   style="justify-content: right;"
                   (click)="deleteGarantia(garantia)"
                 >
-                  <mat-icon>person_remove</mat-icon>
+                  <mat-icon>remove_circle_outline</mat-icon>
                 </button>
               </td>
             </ng-container>
