--- a/src/app/components/motor/motor.component.html
+++ b/src/app/components/motor/motor.component.html
@@ -4,7 +4,7 @@
         <mat-card-title>
           <div class="title-pill">
             <h2 style="width: 100%;">
-              Partes para Motor
+              Motor
             </h2>
           </div>
           </mat-card-title
@@ -14,7 +14,7 @@
         <div class="container-table">
           <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
             <ng-container matColumnDef="nombre_parte">
-              <th mat-header-cell *matHeaderCellDef>Nombre de Parte</th>
+              <th mat-header-cell *matHeaderCellDef>Nombre</th>
               <td mat-cell *matCellDef="let motor">{{ motor.nombre_parte }}</td>
             </ng-container>
   
@@ -45,7 +45,7 @@
                   style="justify-content: right;"
                   (click)="deletePart(motor)"
                 >
-                  <mat-icon>person_remove</mat-icon>
+                  <mat-icon>remove_circle_outline</mat-icon>
                 </button>
               </td>
             </ng-container>
