--- a/src/app/components/partes/partes.component.html
+++ b/src/app/components/partes/partes.component.html
@@ -56,7 +56,7 @@
                   style="justify-content: right;"
                   (click)="deletePart(parte)"
                 >
-                  <mat-icon>person_remove</mat-icon>
+                  <mat-icon>remove_circle_outline</mat-icon>
                 </button>
               </td>
             </ng-container>
