Avance de los modulos de Reparaciones

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -54,6 +54,7 @@
               <a  mat-list-item routerLink="partes/carroceria" routerLinkActive="active" >Carroceria</a>
             </mat-expansion-panel>
             <a  mat-list-item routerLink="garantias" routerLinkActive="active" >Garantias</a>
+            <a  mat-list-item routerLink="reparaciones" routerLinkActive="active" >Reparaciones</a>
         </mat-nav-list>
     </div>
   </mat-sidenav>
