--- a/src/app/components/reparacion-modal/reparacion-modal.component.html
+++ b/src/app/components/reparacion-modal/reparacion-modal.component.html
@@ -1,1 +1,82 @@
-<p>reparacion-modal works!</p>
+<div mat-dialog-content>
+    <mat-vertical-stepper [linear]="isLinear">
+      <mat-step [stepControl]="firstStep">
+        <form [formGroup]="firstStep">
+          <ng-template matStepLabel>Nueva Reparacion</ng-template>
+          <mat-form-field appearance="outline">
+            <mat-label> Usuario</mat-label>
+            <mat-select formControlName="usuario_id" >
+                <mat-option [(value)]="usuario.id" *ngFor="let usuario of usuarios">
+                    {{ usuario.nombre_usuario }}
+                </mat-option>
+            </mat-select>
+          </mat-form-field>
+          <mat-form-field appearance="outline">
+            <mat-label> Cliente</mat-label>
+            <mat-select formControlName="cliente_id" >
+                <mat-option [(value)]="cliente.id" *ngFor="let cliente of clientes">
+                    {{ cliente.apellidos }}
+                </mat-option>
+            </mat-select>
+          </mat-form-field>
+          <div>
+            <button mat-button matStepperNext>Siguiente</button>
+          </div>
+        </form>
+      </mat-step>
+      <mat-step [setControl]="secondStep">
+        <form [formGroup]="secondStep">
+          <ng-template matStepLabel>Agregar Artículos</ng-template>
+          <mat-form-field appearance="outline">
+            <mat-label> Parte </mat-label>
+            <mat-select formControlName="parte_id" >
+                <mat-option [(value)]="parte" *ngFor="let parte of partes">
+                    {{ parte.nombre_parte }}
+                </mat-option>
+            </mat-select>
+          </mat-form-field>
+          <mat-form-field appearance="outline">
+            <mat-label> Cantidad</mat-label>
+            <input matInput type="number" placeholder="0" min="0" max="20" formControlName="cantidad">
+          </mat-form-field>
+          <ng-container>
+              <button mat-icon-button (click)="agregarDetalle()">
+                  <mat-icon>add</mat-icon>
+              </button>
+          </ng-container>
+          <div class="container-table">
+            <table mat-table [dataSource]="detallesDS" class="mat-elevation-z8">
+              <ng-container matColumnDef="nombre_parte">
+                <th mat-header-cell *matHeaderCellDef>Nombre</th>
+                <td mat-cell *matCellDef="let detalles">{{ detalles.parte_id.nombre_parte}}</td>
+              </ng-container>
+    
+              <ng-container matColumnDef="cantidad">
+                <th mat-header-cell *matHeaderCellDef>Cantidad</th>
+                <td mat-cell *matCellDef="let detalles">{{ detalles.cantidad }}</td>
+              </ng-container>
+
+              <ng-container matColumnDef="acciones">
+                <th mat-header-cell *matHeaderCellDef>Acciones</th>
+                <td mat-cell *matCellDef="let detalles">
+                  <button
+                    mat-icon-button
+                    style="justify-content: right;"
+                    (click)="deleteDetalle()">
+                    <mat-icon>remove_circle_outline</mat-icon>
+                  </button>
+                </td>
+              </ng-container>
+    
+              <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+              <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+            </table>
+          </div>
+          <div>
+            <button mat-button matStepperNext (click)="insertReparacion()">Terminar</button>
+          </div>
+        </form>
+      </mat-step>
+    </mat-vertical-stepper>
+  </div>
+  
