--- a/src/app/components/reparacion/reparacion.component.html
+++ b/src/app/components/reparacion/reparacion.component.html
@@ -4,13 +4,13 @@
         <mat-card-title>
           <div class="title-pill">
             <h2>
-              Usuarios
+              Reparaciones
             </h2>
             <button
               mat-icon-button
               style="justify-content: right;"
               (click)="openModal()">
-              <mat-icon>person_add</mat-icon>
+              <mat-icon>add</mat-icon>
             </button>
           </div>
           </mat-card-title
@@ -32,13 +32,14 @@
             <ng-container matColumnDef="garantia">
               <th mat-header-cell *matHeaderCellDef>Garantia</th>
               <td mat-cell *matCellDef="let repar">
-                {{ repar.garantia.fecha_inicio | date: "MM/dd/yy" }}
+                {{ repar.garantia.fecha_inicio | date: "MM/dd/yy" }} -
+                {{ repar.garantia.fecha_vencimiento | date: "MM/dd/yy" }}
               </td>
             </ng-container>
   
             <ng-container matColumnDef="total">
               <th mat-header-cell *matHeaderCellDef>Total</th>
-              <td mat-cell *matCellDef="let repar">{{ repar.total }}</td>
+              <td mat-cell *matCellDef="let repar">{{ repar.total | currency }}</td>
             </ng-container>
   
             <ng-container matColumnDef="fecha_realizacion">
@@ -48,10 +49,15 @@
               </td>
             </ng-container>
             
-            <ng-container matColumnDef="reparaciones_detalles">
+            <ng-container matColumnDef="reparacion_detalles">
                 <th mat-header-cell *matHeaderCellDef>Detalles</th>
                 <td mat-cell *matCellDef="let repar">
-                  {{ repar.empleado.direccion }}
+                  <button
+                  mat-icon-button
+                  style="justify-content: right;"
+                  (click)="verDetalles(repar)">
+                  <mat-icon>preview</mat-icon>
+                </button>
                 </td>
               </ng-container>
   
@@ -67,9 +73,8 @@
                 <button
                   mat-icon-button
                   style="justify-content: right;"
-                  (click)="deleteUser(repar)"
-                >
-                  <mat-icon>person_remove</mat-icon>
+                  (click)="deleteUser(repar)">
+                  <mat-icon>remove_circle_outline</mat-icon>
                 </button>
               </td>
             </ng-container>
