+Reparacion module finish

--- a/src/app/components/vehiculos/vehiculos.component.html
+++ b/src/app/components/vehiculos/vehiculos.component.html
@@ -9,7 +9,7 @@
               mat-icon-button
               style="justify-content: right;"
               (click)="openModal()">
-              <mat-icon>person_add</mat-icon>
+              <mat-icon>add</mat-icon>
             </button>
           </div></mat-card-title>
 
