--- a/src/app/components/clients/clients.component.html
+++ b/src/app/components/clients/clients.component.html
@@ -19,41 +19,52 @@
               <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
                 <ng-container matColumnDef="nombre">
                   <th mat-header-cell *matHeaderCellDef>Nombre</th>
-                  <td mat-cell *matCellDef="let empleado"> {{empleado.nombre}} </td>
+                  <td mat-cell *matCellDef="let cliente"> {{cliente.nombre}} </td>
                 </ng-container>
 
                 <ng-container matColumnDef="email">
                   <th mat-header-cell *matHeaderCellDef>Correo electrónico</th>
-                  <td mat-cell *matCellDef="let empleado"> {{empleado.email}} </td>
+                  <td mat-cell *matCellDef="let cliente"> {{cliente.email}} </td>
                 </ng-container>
 
                 <ng-container matColumnDef="apellidos">
                   <th mat-header-cell *matHeaderCellDef>Apellidos</th>
-                  <td mat-cell *matCellDef="let empleado"> {{empleado.apellidos}} </td>
+                  <td mat-cell *matCellDef="let cliente"> {{cliente.apellidos}} </td>
                 </ng-container>
 
                 <ng-container matColumnDef="direccion">
                   <th mat-header-cell *matHeaderCellDef>Dirección</th>
-                  <td mat-cell *matCellDef="let empleado"> {{empleado.direccion}} </td>
+                  <td mat-cell *matCellDef="let cliente"> {{cliente.direccion}} </td>
                 </ng-container>
 
                 <ng-container matColumnDef="telefono">
                   <th mat-header-cell *matHeaderCellDef>Teléfono</th>
-                  <td mat-cell *matCellDef="let empleado"> {{empleado.telefono}} </td>
+                  <td mat-cell *matCellDef="let cliente"> {{cliente.telefono}} </td>
                 </ng-container>
 
                 <ng-container matColumnDef="fecha_registro">
                   <th mat-header-cell *matHeaderCellDef>Fecha de Registro</th>
-                  <td mat-cell *matCellDef="let empleado"> {{empleado.fecha_registro | date:"MM/dd/yy" }} </td>
+                  <td mat-cell *matCellDef="let cliente"> {{cliente.fecha_registro | date:"MM/dd/yy" }} </td>
+                </ng-container>
+
+                <ng-container matColumnDef="vehiculo">
+                  <th mat-header-cell *matHeaderCellDef>Vehiculo</th>
+                  <td mat-cell *matCellDef="let cliente" >
+
+                    Modelo: {{cliente.vehiculo.modelo }}<br>
+                    Año: {{cliente.vehiculo.fecha_fabricacion }}<br>
+                    Descripción: {{ cliente.vehiculo.descripcion}}
+
+                </td>
                 </ng-container>
 
                 <ng-container matColumnDef="acciones">
                   <th mat-header-cell *matHeaderCellDef>Acciones</th>
-                  <td mat-cell *matCellDef="let empleado">
-                    <button mat-icon-button style="justify-content: right;" (click)="updateClient(empleado)">
+                  <td mat-cell *matCellDef="let cliente">
+                    <button mat-icon-button style="justify-content: right;" (click)="updateClient(cliente)">
                       <mat-icon>edit</mat-icon>
                     </button>
-                    <button mat-icon-button style="justify-content: right;" (click)="deleteClient(empleado)">
+                    <button mat-icon-button style="justify-content: right;" (click)="deleteClient(cliente)">
                       <mat-icon>person_remove</mat-icon>
                     </button>
                   </td>
