--- a/src/app/components/reparacion-modal/reparacion-modal.component.html
+++ b/src/app/components/reparacion-modal/reparacion-modal.component.html
@@ -29,7 +29,7 @@
           <ng-template matStepLabel>Agregar Artículos</ng-template>
           <mat-form-field appearance="outline">
             <mat-label> Parte </mat-label>
-            <mat-select formControlName="parte_id" >
+            <mat-select formControlName="parte" >
                 <mat-option [(value)]="parte" *ngFor="let parte of partes">
                     {{ parte.nombre_parte }}
                 </mat-option>
@@ -48,9 +48,9 @@
             <table mat-table [dataSource]="detallesDS" class="mat-elevation-z8">
               <ng-container matColumnDef="nombre_parte">
                 <th mat-header-cell *matHeaderCellDef>Nombre</th>
-                <td mat-cell *matCellDef="let detalles">{{ detalles.parte_id.nombre_parte}}</td>
+                <td mat-cell *matCellDef="let detalles">{{ detalles.parte.nombre_parte}}</td>
               </ng-container>
-    
+
               <ng-container matColumnDef="cantidad">
                 <th mat-header-cell *matHeaderCellDef>Cantidad</th>
                 <td mat-cell *matCellDef="let detalles">{{ detalles.cantidad }}</td>
@@ -67,16 +67,16 @@
                   </button>
                 </td>
               </ng-container>
-    
+
               <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
               <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
             </table>
           </div>
           <div>
-            <button mat-button matStepperNext (click)="insertReparacion()">Terminar</button>
+            <button mat-button matStepperNext (click)="insertData()">Terminar</button>
           </div>
         </form>
       </mat-step>
     </mat-vertical-stepper>
   </div>
-  
+
