--- a/src/app/components/stock/stock.component.html
+++ b/src/app/components/stock/stock.component.html
@@ -10,7 +10,7 @@
             mat-icon-button
             style="justify-content: right;"
             (click)="openModal()">
-            <mat-icon>person_add</mat-icon>
+            <mat-icon>add</mat-icon>
           </button>
         </div>
         </mat-card-title
