--- a/src/app/components/reparacion-detalles/reparacion-detalles.component.html
+++ b/src/app/components/reparacion-detalles/reparacion-detalles.component.html
@@ -1,19 +1,15 @@
+
 <div mat-dialog-content> 
-    <div class="title-pill">
-    <h2 style="width: 100%;">
-      Detalles de Reparacion
-    </h2>
-  </div>
-    <div class="container-table">
+    <div class="container-table-detalle">
         <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
           <ng-container matColumnDef="nombre_parte">
             <th mat-header-cell *matHeaderCellDef>Nombre</th>
-            <td mat-cell *matCellDef="let detalles">{{ detalles.parte.nombre }}</td>
+            <td mat-cell *matCellDef="let detalle">{{ detalle.parte.nombre_parte }}</td>
           </ng-container>
 
           <ng-container matColumnDef="cantidad">
             <th mat-header-cell *matHeaderCellDef>Cantidad</th>
-            <td mat-cell *matCellDef="let detalles">{{ detalles.cantidad }}</td>
+            <td mat-cell *matCellDef="let detalle">{{ detalle.cantidad }}</td>
           </ng-container>
 
           <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
