--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -12,7 +12,7 @@ body {
 
 .title {
     text-decoration: none;
-    color: white;
+    color: rgb(103, 58, 183);
 }
 
 .app-header {
@@ -22,8 +22,11 @@ body {
     left: 0;
     right: 0;
     z-index: 2;
-    box-shadow: 0 3px 5px -1px hsla(0, 0, 0, 0.2), 0 6px 10px 0 hsla(0, 0, 0, 0.14), 0 1px 18px 0 hsla(0, 0, 0, 0.12);
+    background-color: white;
+    color: rgb(103, 58, 183);
+    box-shadow: 0px 2px 2px 2px hsla(262, 52%, 47%, 0.11);
 }
+
 
 .example-container {
     position: absolute;
@@ -35,6 +38,22 @@ body {
 
 mat-sidenav-container {
     height: 100%;
+}
+
+mat-sidenav{
+  background-color: rgb(103, 58, 183) !important;
+  color: white;
+  border: none;
+}
+
+div.mat-drawer-inner-container{
+  background-color: rgb(103, 58, 183) !important;
+}
+
+.mat-expansion-panel{
+  background-color: transparent !important;
+  border-radius: none;
+  box-shadow: none;
 }
 
 @media (max-width: 900px){
